--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
     <script src="https://unpkg.com/phosphor-icons"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -26,7 +26,7 @@
             <div class="list-wrapper">
                 <div class="block-list-item list-item">
                     <div class="block-list-item-left">
-                        <div class="list-dropdown-arrow icon-wrapper" data-toggle="collapse" data-target="#demo">   
+                        <div class="list-dropdown-arrow icon-wrapper">   
                             <i class="ph-caret-down"></i>
                         </div>
                         
@@ -41,7 +41,7 @@
                     </div>
                 </div>
     
-                <div id="demo" class="collapse dropdown-wrapper">
+                <div class="collapse dropdown-wrapper">
                     <ul class="dropdown-list">
                         <li class="dropdown-list-item">
                             <div class="crosshair-wrapper icon-wrapper">   
